--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-membership-backend",
+  "name": "akhada-gym-membership",
   "version": "0.1.0",
   "private": true,
   "scripts": {
